# Minimizing-DFA-tester

./: .gitignore  README.md  dfa-app.spec  pyproject.toml  run.cmd
examples/: RENDERING_EXAMPLES.md  ToyDFA.dot  automata.csv  automata_advanced.csv  automata_rendering_modes.csv  generate_rendering_examples.py
notebooks/: pt_dfa_complexity.ipynb
src/dfa_app/: __init__.py  __main__.py  application.py  commands.py
src/dfa_app/algorithms/: __init__.py  base.py  minimizer.py  pt_dfa_minimizer.py
src/dfa_app/domain/: __init__.py  models.py  validation.py
src/dfa_app/importers/: __init__.py  dot_parser.py  file_loader.py  parser.py
src/dfa_app/services/: __init__.py  exporting.py  processing.py
src/dfa_app/ui/: automata_graph.py  complexity_chart.py  main_window.py
tests/: test_dfa_minimization.py
tests/integration/: test_processing.py
tests/ui/: test_main_window.py
tests/unit/: test_commands.py  test_dot_parser.py  test_exporting.py  test_file_loader.py  test_parser.py  test_validation.py
tools/: run-dispatcher.cmd
