[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfa-minimizer-app"
version = "0.1.0"
description = "Desktop application for loading and minimizing deterministic finite automata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.7,<7",
    "matplotlib>=3.9,<4",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-qt>=4.4,<5",
    "pyinstaller>=6.8,<7",
]

[project.scripts]
dfa-app = "dfa_app.application:main"
run = "dfa_app.commands:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
qt_api = "pyqt6"
